--- a/src/main/resources/wagner/stephanie/lizzie/i18n/GuiBundle.properties
+++ b/src/main/resources/wagner/stephanie/lizzie/i18n/GuiBundle.properties
@@ -2,5 +2,7 @@
 # Created by JFormDesigner on Sat Mar 24 18:05:40 CST 2018
 #
 
+WinrateHistogramDialog.checkBoxHistogramShowBlack.text=Show black
+WinrateHistogramDialog.checkBoxHistogramShowWhite.text=Show white
 WinrateHistogramDialog.checkBoxShowOnlyHighOscillation.text=Show only moves with high oscillation of winrate
 WinrateHistogramDialog.this.title=Winrate Histogram
