Translated some i18n strings

--- a/src/main/resources/wagner/stephanie/lizzie/i18n/GuiBundle.properties
+++ b/src/main/resources/wagner/stephanie/lizzie/i18n/GuiBundle.properties
@@ -2,7 +2,65 @@
 # Created by JFormDesigner on Sat Mar 24 18:05:40 CST 2018
 #
 
+ChangeMoveDialog.cancelButton.text=Cancel
+ChangeMoveDialog.labelChangeTo.text=Change coordinates to:
+ChangeMoveDialog.labelMoveNumber.text=Move number:
+ChangeMoveDialog.labelNotes.text=Please input the move number and the correct coordinate you want to modify.
+ChangeMoveDialog.okButton.text=OK
+ChangeMoveDialog.this.title=Change existing move
+OptionDialog.buttonResetCommandLine.text=Reset
+OptionDialog.cancelButton.text=Cancel
+OptionDialog.checkBoxAnalysisWindowShow.text=Show move list
+OptionDialog.checkBoxAutoEnterTryPlayingMode.text=Automatically enter when placing stone in middle game.
+OptionDialog.checkBoxFancyStones.text=Fancy stones
+OptionDialog.checkBoxMainWindowAlwaysOnTop.text=Always on top
+OptionDialog.checkBoxMouseMoveShow.text=Mouse over show move.
+OptionDialog.checkBoxMoveNumberLimit.text=Only show last
+OptionDialog.checkBoxPlayoutsInShortForm.text=Playouts in short form
+OptionDialog.checkBoxShowBlackSuggestion.text=Show black
+OptionDialog.checkBoxShowMoveNumber.text=Show
+OptionDialog.checkBoxShowNextMove.text=Show next move
+OptionDialog.checkBoxShowShadow.text=Show. Shadow size:
+OptionDialog.checkBoxShowWhiteSuggestion.text=Show white
+OptionDialog.labelAnalysisModeOn.text=Analysis mode:
+OptionDialog.labelAxisSetting.text=Axis setting:
+OptionDialog.labelBoardDisplay.text=Board display:
+OptionDialog.labelColorBlue.text=B
+OptionDialog.labelColorGreen.text=G
+OptionDialog.labelColorRed.text=R
+OptionDialog.labelLeelazCommandLine.text=Leelaz command line:
+OptionDialog.labelMainWindow.text=Main window:
+OptionDialog.labelMaxAnalysisTime.text=Max time:
+OptionDialog.labelMinute.text=minute(s)
+OptionDialog.labelMoveNumber.text=Move number:
+OptionDialog.labelMoveNumberLimitLabelTail.text=move(s).
+OptionDialog.labelNotes.text=Note: Restarting Lizzie is required after changing the leelaz command line
+OptionDialog.labelShadow.text=Stone shadow:
+OptionDialog.labelSuggestion.text=Suggestions:
+OptionDialog.labelTryPlayingMode.text=Try playing mode:
+OptionDialog.labelVariationLimit.text=Variation limit:
+OptionDialog.okButton.text=OK
+OptionDialog.radioButtonA1Bottom.text=A1 is on bottom(Yike, Yicheng, Zen, .etc)
+OptionDialog.radioButtonA1Top.text=A1 is on top(Yehu)
+OptionDialog.radioButtonBoardClassic.text=Classic:
+OptionDialog.radioButtonBoardFancy.text=Fancy
+OptionDialog.radioButtonUnlimited.text=Unlimited
+OptionDialog.radioButtonV10.text=10
+OptionDialog.radioButtonV15.text=15
+OptionDialog.radioButtonV30.text=30
+OptionDialog.radioButtonV5.text=5
+OptionDialog.this.title=Options
 WinrateHistogramDialog.checkBoxHistogramShowBlack.text=Show black
 WinrateHistogramDialog.checkBoxHistogramShowWhite.text=Show white
 WinrateHistogramDialog.checkBoxShowOnlyHighOscillation.text=Show only moves with high oscillation of winrate
 WinrateHistogramDialog.this.title=Winrate Histogram
+WinrateHistogramDialog.histogramTable.title.moveNumber=Move Number
+WinrateHistogramDialog.histogramTable.title.color=Color
+WinrateHistogramDialog.histogramTable.title.move=Move
+WinrateHistogramDialog.histogramTable.title.blackWinrate=Black Win%
+WinrateHistogramDialog.histogramTable.title.whiteWinrate=White Win%
+WinrateHistogramDialog.histogramTable.title.blackWinDiff=Black Win% diff
+LizzieFrame.prompt.gotoDialogMessage=Enter move number you want to go:\n\
+e.g. 78 - Jump to move No. 78\n\
+-15 - move backward 15 steps\n\
++15 move forward 15 steps.
