Support changing existing moves.

--- a/src/main/resources/wagner/stephanie/lizzie/i18n/GuiBundle.properties
+++ b/src/main/resources/wagner/stephanie/lizzie/i18n/GuiBundle.properties
@@ -64,3 +64,4 @@ LizzieFrame.prompt.gotoDialogMessage=Enter move number you want to go:\n\
 e.g. 78 - Jump to move No. 78\n\
 -15 - move backward 15 steps\n\
 +15 move forward 15 steps.
+Lizzie.prompt.invalidCoordinates=The coordinates input are not correct.
