--- a/src/main/resources/wagner/stephanie/lizzie/i18n/GuiBundle_zh.properties
+++ b/src/main/resources/wagner/stephanie/lizzie/i18n/GuiBundle_zh.properties
@@ -5,7 +5,7 @@
 ChangeMoveDialog.cancelButton.text=\u53D6\u6D88
 ChangeMoveDialog.labelChangeTo.text=\u4FEE\u6539\u5750\u6807\u4E3A:
 ChangeMoveDialog.labelMoveNumber.text=\u8981\u4FEE\u6539\u7684\u624B\u6570:
-ChangeMoveDialog.labelNotes.text=\u8BF7\u8F93\u5165\u8981\u4FEE\u6539\u7684\u624B\u6570\u4EE5\u53CA\u60F3\u8981\u4FEE\u6539\u7684\u76EE\u7684\u5750\u6807.
+ChangeMoveDialog.labelNotes.text=\u8BF7\u8F93\u5165\u8981\u4FEE\u6539\u7684\u624B\u6570\u4EE5\u53CA\u6B63\u786E\u7684\u5750\u6807. \u624B\u6570\u81F3\u5C11\u662F1\uFF0C\u6700\u591A\u662F\u6700\u540E\u4E00\u624B\u7684\u624B\u6570\u3002
 ChangeMoveDialog.okButton.text=\u786E\u5B9A
 ChangeMoveDialog.this.title=\u4FEE\u6539\u5DF2\u4E0B\u7684\u5B50
 OptionDialog.buttonResetCommandLine.text=\u91CD\u7F6E
@@ -64,3 +64,4 @@ LizzieFrame.prompt.gotoDialogMessage=\u8F93\u5165\u4F60\u60F3\u8981\u8DF3\u8F6C\
 \u4F8B\u5982\uFF0C78 - \u8DF3\u8F6C\u523078\u624B\n\
 -15 - \u5411\u524D\u8DF315\u624B\n\
 +15 - \u5411\u540E\u8DF315\u624B
+Lizzie.prompt.invalidCoordinates=\u8F93\u5165\u7684\u5750\u6807\u4E0D\u6B63\u786E
