Support changing network without restart

--- a/src/main/resources/wagner/stephanie/lizzie/i18n/GuiBundle.properties
+++ b/src/main/resources/wagner/stephanie/lizzie/i18n/GuiBundle.properties
@@ -8,6 +8,16 @@ ChangeMoveDialog.labelMoveNumber.text=Move number:
 ChangeMoveDialog.labelNotes.text=Please input the move number and the correct coordinate you want to modify.
 ChangeMoveDialog.okButton.text=OK
 ChangeMoveDialog.this.title=Change existing move
+EngineProfileManagerDialog.cancelButton.text=Cancel
+EngineProfileManagerDialog.labelProfile2.text=Profile 2\:
+EngineProfileManagerDialog.labelProfile3.text=Profile 3\:
+EngineProfileManagerDialog.labelProfile4.text=Profile 4\:
+EngineProfileManagerDialog.labelProfile5.text=Profile 5\:
+EngineProfileManagerDialog.labelProfile1.text=Profile 1:
+EngineProfileManagerDialog.labelProfileManagerNote.text=Configure common used profiles below. Each profile has a shortcut CTRL + <Profile Number>
+EngineProfileManagerDialog.okButton.text=OK
+EngineProfileManagerDialog.this.title=Engine Profile Manager
+OptionDialog.buttonManage.text=Manage...
 OptionDialog.buttonResetCommandLine.text=Reset
 OptionDialog.cancelButton.text=Cancel
 OptionDialog.checkBoxAnalysisWindowShow.text=Show move list
@@ -34,7 +44,7 @@ OptionDialog.labelMaxAnalysisTime.text=Max time:
 OptionDialog.labelMinute.text=minute(s)
 OptionDialog.labelMoveNumber.text=Move number:
 OptionDialog.labelMoveNumberLimitLabelTail.text=move(s).
-OptionDialog.labelNotes.text=Note: Restarting Lizzie is required after changing the leelaz command line
+OptionDialog.labelNotes.text=Note: Please wait patiently for a while for lizzie to restart after you change the command line.
 OptionDialog.labelShadow.text=Stone shadow:
 OptionDialog.labelSuggestion.text=Suggestions:
 OptionDialog.labelTryPlayingMode.text=Try playing mode:
@@ -65,3 +75,4 @@ e.g. 78 - Jump to move No. 78\n\
 -15 - move backward 15 steps\n\
 +15 move forward 15 steps.
 Lizzie.prompt.invalidCoordinates=The coordinates input are not correct.
+Leelaz.prompt.engineNotStart=The engine seems stuck. Please use CTRL + C to copy the SGF to clipboard. Then restart Lizzie and press CTRL + V to restore the board.
