--- a/src/main/resources/wagner/stephanie/lizzie/i18n/GuiBundle_zh.properties
+++ b/src/main/resources/wagner/stephanie/lizzie/i18n/GuiBundle_zh.properties
@@ -1,13 +1,22 @@
 #
 # Created by JFormDesigner on Sat Mar 24 18:05:40 CST 2018
 #
-
+EngineProfileManagerDialog.labelProfileManagerNote.text=\u5728\u8FD9\u91CC\u914D\u7F6E\u5E38\u7528\u7684\u547D\u4EE4\u884C\u9009\u9879\u3002\u914D\u7F6E\u5B8C\u6BD5\u540E\u53EF\u4EE5\u5FEB\u6377\u7528CTRL + 1~5\u8FDB\u884C\u5207\u6362\u3002
+EngineProfileManagerDialog.labelProfile5.text=\u914D\u7F6E5:
+EngineProfileManagerDialog.labelProfile4.text=\u914D\u7F6E4:
+EngineProfileManagerDialog.labelProfile3.text=\u914D\u7F6E3:
+EngineProfileManagerDialog.labelProfile2.text=\u914D\u7F6E2:
+EngineProfileManagerDialog.labelProfile1.text=\u914D\u7F6E1:
+EngineProfileManagerDialog.this.title=\u5F15\u64CE\u914D\u7F6E\u7BA1\u7406
+EngineProfileManagerDialog.okButton.text=\u786E\u5B9A
+EngineProfileManagerDialog.cancelButton.text=\u53D6\u6D88
 ChangeMoveDialog.cancelButton.text=\u53D6\u6D88
 ChangeMoveDialog.labelChangeTo.text=\u4FEE\u6539\u5750\u6807\u4E3A:
 ChangeMoveDialog.labelMoveNumber.text=\u8981\u4FEE\u6539\u7684\u624B\u6570:
 ChangeMoveDialog.labelNotes.text=\u8BF7\u8F93\u5165\u8981\u4FEE\u6539\u7684\u624B\u6570\u4EE5\u53CA\u6B63\u786E\u7684\u5750\u6807. \u624B\u6570\u81F3\u5C11\u662F1\uFF0C\u6700\u591A\u662F\u6700\u540E\u4E00\u624B\u7684\u624B\u6570\u3002
 ChangeMoveDialog.okButton.text=\u786E\u5B9A
 ChangeMoveDialog.this.title=\u4FEE\u6539\u5DF2\u4E0B\u7684\u5B50
+OptionDialog.buttonManage.text=\u7BA1\u7406...
 OptionDialog.buttonResetCommandLine.text=\u91CD\u7F6E
 OptionDialog.cancelButton.text=\u53D6\u6D88
 OptionDialog.checkBoxAnalysisWindowShow.text=\u663E\u793A\u53D8\u5316\u56FE\u5217\u8868\u7A97\u53E3
@@ -34,7 +43,7 @@ OptionDialog.labelMaxAnalysisTime.text=\u6700\u957F\u5206\u6790\u65F6\u95F4:
 OptionDialog.labelMinute.text=\u5206\u949F
 OptionDialog.labelMoveNumber.text=\u624B\u6570:
 OptionDialog.labelMoveNumberLimitLabelTail.text=\u624B.
-OptionDialog.labelNotes.text=\u6CE8\u610F\uFF1A\u4FEE\u6539\u5B8CLeelaz\u547D\u4EE4\u884C\u9009\u9879\u540E\u9700\u8981\u91CD\u542FLizzie\u624D\u80FD\u751F\u6548
+OptionDialog.labelNotes.text=\u6CE8\u610F\uFF1A\u4FEE\u6539\u5B8CLeelaz\u547D\u4EE4\u884C\u9009\u9879\u540E, Leelaz\u4F1A\u81EA\u52A8\u91CD\u542F\uFF0C\u671F\u95F4\u754C\u9762\u6CA1\u6709\u52A8\u9759\uFF0C\u8BF7\u8010\u5FC3\u7B49\u4E00\u4F1A\uFF0C\u4E0D\u8981\u64CD\u4F5C
 OptionDialog.labelShadow.text=\u68CB\u5B50\u9634\u5F71:
 OptionDialog.labelSuggestion.text=\u9009\u70B9\u5EFA\u8BAE:
 OptionDialog.labelTryPlayingMode.text=\u8BD5\u4E0B\u6A21\u5F0F:
@@ -65,3 +74,4 @@ LizzieFrame.prompt.gotoDialogMessage=\u8F93\u5165\u4F60\u60F3\u8981\u8DF3\u8F6C\
 -15 - \u5411\u524D\u8DF315\u624B\n\
 +15 - \u5411\u540E\u8DF315\u624B
 Lizzie.prompt.invalidCoordinates=\u8F93\u5165\u7684\u5750\u6807\u4E0D\u6B63\u786E
+Leelaz.prompt.engineNotStart=\u4F3C\u4E4E\u5F15\u64CE\u7684\u542F\u52A8\u51FA\u73B0\u4E86\u95EE\u9898\u3002\u8BF7\u6309CTRL + C\u62F7\u8D1D\u5F53\u524D\u68CB\u5C40\uFF0C\u91CD\u542FLizzie\u518D\u6309CTRL + V\u6062\u590D\u68CB\u5C40
