i18n-ed some string

--- a/src/main/resources/wagner/stephanie/lizzie/i18n/GuiBundle.properties
+++ b/src/main/resources/wagner/stephanie/lizzie/i18n/GuiBundle.properties
@@ -76,3 +76,4 @@ e.g. 78 - Jump to move No. 78\n\
 +15 move forward 15 steps.
 Lizzie.prompt.invalidCoordinates=The coordinates input are not correct.
 Leelaz.prompt.engineNotStart=The engine seems stuck. Please use CTRL + C to copy the SGF to clipboard. Then restart Lizzie and press CTRL + V to restore the board.
+Leelaz.prompt.unexpectedProcessEnd=Warning: leelaz process is terminated unexpectedly. Please check!
