--- a/src/main/resources/wagner/stephanie/lizzie/i18n/GuiBundle.properties
+++ b/src/main/resources/wagner/stephanie/lizzie/i18n/GuiBundle.properties
@@ -32,6 +32,7 @@ OptionDialog.checkBoxShowMoveNumber.text=Show
 OptionDialog.checkBoxShowNextMove.text=Show next move
 OptionDialog.checkBoxShowShadow.text=Show. Shadow size:
 OptionDialog.checkBoxShowWhiteSuggestion.text=Show white
+OptionDialog.labelBoardSize.text=Board size selection\:
 OptionDialog.labelAnalysisModeOn.text=Analysis mode:
 OptionDialog.labelAxisSetting.text=Axis setting:
 OptionDialog.labelBoardDisplay.text=Board display:
@@ -50,6 +51,9 @@ OptionDialog.labelSuggestion.text=Suggestions:
 OptionDialog.labelTryPlayingMode.text=Try playing mode:
 OptionDialog.labelVariationLimit.text=Variation limit:
 OptionDialog.okButton.text=OK
+OptionDialog.radioButtonBoard19x19.text=19x19
+OptionDialog.radioButtonBoard13x13.text=13x13
+OptionDialog.radioButtonBoard9x9.text=9x9
 OptionDialog.radioButtonA1Bottom.text=A1 is on bottom(Yike, Yicheng, Zen, .etc)
 OptionDialog.radioButtonA1Top.text=A1 is on top(Yehu)
 OptionDialog.radioButtonBoardClassic.text=Classic:
