--- a/src/main/resources/wagner/stephanie/lizzie/i18n/GuiBundle_zh.properties
+++ b/src/main/resources/wagner/stephanie/lizzie/i18n/GuiBundle_zh.properties
@@ -76,3 +76,7 @@ LizzieFrame.prompt.gotoDialogMessage=\u8F93\u5165\u4F60\u60F3\u8981\u8DF3\u8F6C\
 Lizzie.prompt.invalidCoordinates=\u8F93\u5165\u7684\u5750\u6807\u4E0D\u6B63\u786E
 Leelaz.prompt.engineNotStart=\u4F3C\u4E4E\u5F15\u64CE\u7684\u542F\u52A8\u51FA\u73B0\u4E86\u95EE\u9898\u3002\u8BF7\u6309CTRL + C\u62F7\u8D1D\u5F53\u524D\u68CB\u5C40\uFF0C\u91CD\u542FLizzie\u518D\u6309CTRL + V\u6062\u590D\u68CB\u5C40
 Leelaz.prompt.unexpectedProcessEnd=LeelaZero\u7684\u8FDB\u7A0B\u5F02\u5E38\u9000\u51FA\uFF0CLizzie\u4E0D\u80FD\u7EE7\u7EED\u5DE5\u4F5C\u3002\u8BF7\u5C1D\u8BD5\u6309CTRL + 0(\u6570\u5B570)\u91CD\u542F\u5F15\u64CE\u3002\u5982\u679C\u6545\u969C\u4E0D\u80FD\u6392\u9664\uFF0C\u8BF7\u68C0\u67E5LeelaZero\u662F\u4E0D\u662F\u786E\u5B9E\u65E0\u6CD5\u542F\u52A8\u3002
+OptionDialog.labelBoardSize.text=\u68CB\u76D8\u5927\u5C0F\u9009\u62E9:
+OptionDialog.radioButtonBoard13x13.text=13x13
+OptionDialog.radioButtonBoard19x19.text=19x19
+OptionDialog.radioButtonBoard9x9.text=9x9
