Added simple GTP command enter system.

--- a/src/main/resources/wagner/stephanie/lizzie/i18n/GuiBundle.properties
+++ b/src/main/resources/wagner/stephanie/lizzie/i18n/GuiBundle.properties
@@ -81,3 +81,5 @@ e.g. 78 - Jump to move No. 78\n\
 Lizzie.prompt.invalidCoordinates=The coordinates input are not correct.
 Leelaz.prompt.engineNotStart=The engine seems stuck. Please use CTRL + C to copy the SGF to clipboard. Then restart Lizzie and press CTRL + V to restore the board.
 Leelaz.prompt.unexpectedProcessEnd=Warning: leelaz process is terminated unexpectedly. Please check!
+LizzieFrame.prompt.enterEngineCommand=Please enter GTP command that will be sent to the engine.\n\
+Please do not input commands that can change the board state, such as play, undo or genmove.
