--- a/src/main/resources/wagner/stephanie/lizzie/i18n/GuiBundle_zh.properties
+++ b/src/main/resources/wagner/stephanie/lizzie/i18n/GuiBundle_zh.properties
@@ -80,3 +80,6 @@ OptionDialog.labelBoardSize.text=\u68CB\u76D8\u5927\u5C0F\u9009\u62E9:
 OptionDialog.radioButtonBoard13x13.text=13x13
 OptionDialog.radioButtonBoard19x19.text=19x19
 OptionDialog.radioButtonBoard9x9.text=9x9
+LizzieFrame.prompt.enterEngineCommand=\u8BF7\u8F93\u5165\u9700\u8981\u53D1\u9001\u5230\u5E95\u5C42GTP\u5F15\u64CE\u7684\u547D\u4EE4\u3002\u4F8B\u5982\u52A0\u4E86\u5F81\u5B50\u4EBA\u5DE5\u5224\u65AD\u7684\u7279\u6B8ALeelaZero\uFF0C\u652F\u6301set_ladder_color\u547D\u4EE4\u3002\n\
+\u8BF7\u7279\u522B\u6CE8\u610F\u4E0D\u8981\u8F93\u5165\u5F15\u8D77\u76D8\u9762\u72B6\u6001\u6539\u53D8\u7684\u547D\u4EE4\uFF0C\u5982play\uFF0Cundo\uFF0Cgenmove\uFF0C\u5426\u5219\u4F1A\u9020\u6210Lizzie\u8BB0\u5F55\u7684\u76D8\u9762\u72B6\u6001\u548CLeelaz\u7684\u4E0D\u4E00\u81F4\u4ECE\u800C\u4EA7\u751F\u6DF7\u4E71\u3002\n\
+\u5982\u4E07\u4E00\u4EA7\u751F\u6DF7\u4E71\uFF0C\u8BF7\u6309CTRL + \u6570\u5B570\u91CD\u65B0\u542F\u52A8Leelaz\u5F15\u64CE\u3002
