Support switch between 9 profiles.

--- a/src/main/resources/wagner/stephanie/lizzie/i18n/GuiBundle.properties
+++ b/src/main/resources/wagner/stephanie/lizzie/i18n/GuiBundle.properties
@@ -14,6 +14,10 @@ EngineProfileManagerDialog.labelProfile3.text=Profile 3\:
 EngineProfileManagerDialog.labelProfile4.text=Profile 4\:
 EngineProfileManagerDialog.labelProfile5.text=Profile 5\:
 EngineProfileManagerDialog.labelProfile1.text=Profile 1:
+EngineProfileManagerDialog.labelProfile6.text=Profile 6:
+EngineProfileManagerDialog.labelProfile7.text=Profile 7:
+EngineProfileManagerDialog.labelProfile8.text=Profile 8:
+EngineProfileManagerDialog.labelProfile9.text=Profile 9:
 EngineProfileManagerDialog.labelProfileManagerNote.text=Configure common used profiles below. Each profile has a shortcut CTRL + <Profile Number>
 EngineProfileManagerDialog.okButton.text=OK
 EngineProfileManagerDialog.this.title=Engine Profile Manager
