--- a/src/main/resources/wagner/stephanie/lizzie/i18n/GuiBundle_zh.properties
+++ b/src/main/resources/wagner/stephanie/lizzie/i18n/GuiBundle_zh.properties
@@ -1,7 +1,11 @@
 #
 # Created by JFormDesigner on Sat Mar 24 18:05:40 CST 2018
 #
-EngineProfileManagerDialog.labelProfileManagerNote.text=\u5728\u8FD9\u91CC\u914D\u7F6E\u5E38\u7528\u7684\u547D\u4EE4\u884C\u9009\u9879\u3002\u914D\u7F6E\u5B8C\u6BD5\u540E\u53EF\u4EE5\u5FEB\u6377\u7528CTRL + 1~5\u8FDB\u884C\u5207\u6362\u3002
+EngineProfileManagerDialog.labelProfile6.text=\u914D\u7F6E6:
+EngineProfileManagerDialog.labelProfile7.text=\u914D\u7F6E7:
+EngineProfileManagerDialog.labelProfile8.text=\u914D\u7F6E8:
+EngineProfileManagerDialog.labelProfile9.text=\u914D\u7F6E9:
+EngineProfileManagerDialog.labelProfileManagerNote.text=\u5728\u8FD9\u91CC\u914D\u7F6E\u5E38\u7528\u7684\u547D\u4EE4\u884C\u9009\u9879\u3002\u914D\u7F6E\u5B8C\u6BD5\u540E\u53EF\u4EE5\u5FEB\u6377\u7528CTRL + 1~9\u8FDB\u884C\u5207\u6362\u3002
 EngineProfileManagerDialog.labelProfile5.text=\u914D\u7F6E5:
 EngineProfileManagerDialog.labelProfile4.text=\u914D\u7F6E4:
 EngineProfileManagerDialog.labelProfile3.text=\u914D\u7F6E3:
