Support byou-yomi auto play

--- a/src/main/resources/wagner/stephanie/lizzie/i18n/GuiBundle.properties
+++ b/src/main/resources/wagner/stephanie/lizzie/i18n/GuiBundle.properties
@@ -1,7 +1,24 @@
 #
 # Created by JFormDesigner on Sat Mar 24 18:05:40 CST 2018
 #
-
+ByoYomiAutoPlayDialog.buttonStartPause.text=Start/Pause
+ByoYomiAutoPlayDialog.buttonReset.text=Reset
+ByoYomiAutoPlayDialog.buttonExit.text=Exit
+ByoYomiAutoPlayDialog.checkBoxBlackCountdown.text=Black count down
+ByoYomiAutoPlayDialog.checkBoxWhiteCountdown.text=White count down
+ByoYomiAutoPlayDialog.labelWhite.text=White
+ByoYomiAutoPlayDialog.labelBlack.text=Black
+ByoYomiAutoPlayDialog.labelCountdownValue.text=30
+ByoYomiAutoPlayDialog.labelCountdownIndicator.text=Count down
+ByoYomiAutoPlayDialog.labelSeconds.text=second(s).
+ByoYomiAutoPlayDialog.labelCountdownTime.text=Count down\:
+ByoYomiAutoPlayDialog.labelSettings.text=Settings\:
+ByoYomiAutoPlayDialog.labelNotes.text=<html>\
+<b>Automatically place a move when byou-yomi(count down) ends.</b>\
+<br>Usually used for playing with leelaz.\
+<br>For example, you can turn off the suggesstions and set count down time.\
+</html>
+ByoYomiAutoPlayDialog.this.title=Byou-yomi Auto Play
 ChangeMoveDialog.cancelButton.text=Cancel
 ChangeMoveDialog.labelChangeTo.text=Change coordinates to:
 ChangeMoveDialog.labelMoveNumber.text=Move number:
