--- a/src/main/resources/wagner/stephanie/lizzie/i18n/GuiBundle_zh.properties
+++ b/src/main/resources/wagner/stephanie/lizzie/i18n/GuiBundle_zh.properties
@@ -87,3 +87,22 @@ OptionDialog.radioButtonBoard9x9.text=9x9
 LizzieFrame.prompt.enterEngineCommand=\u8BF7\u8F93\u5165\u9700\u8981\u53D1\u9001\u5230\u5E95\u5C42GTP\u5F15\u64CE\u7684\u547D\u4EE4\u3002\u4F8B\u5982\u52A0\u4E86\u5F81\u5B50\u4EBA\u5DE5\u5224\u65AD\u7684\u7279\u6B8ALeelaZero\uFF0C\u652F\u6301set_ladder_color\u547D\u4EE4\u3002\n\
 \u8BF7\u7279\u522B\u6CE8\u610F\u4E0D\u8981\u8F93\u5165\u5F15\u8D77\u76D8\u9762\u72B6\u6001\u6539\u53D8\u7684\u547D\u4EE4\uFF0C\u5982play\uFF0Cundo\uFF0Cgenmove\uFF0C\u5426\u5219\u4F1A\u9020\u6210Lizzie\u8BB0\u5F55\u7684\u76D8\u9762\u72B6\u6001\u548CLeelaz\u7684\u4E0D\u4E00\u81F4\u4ECE\u800C\u4EA7\u751F\u6DF7\u4E71\u3002\n\
 \u5982\u4E07\u4E00\u4EA7\u751F\u6DF7\u4E71\uFF0C\u8BF7\u6309CTRL + \u6570\u5B570\u91CD\u65B0\u542F\u52A8Leelaz\u5F15\u64CE\u3002
+ByoYomiAutoPlayDialog.this.title=\u8BFB\u79D2\u81EA\u52A8\u843D\u5B50
+ByoYomiAutoPlayDialog.labelNotes.text=<html>\
+<b>\u81EA\u52A8\u5728\u8BFB\u79D2\u7ED3\u675F\u65F6\u6309\u6700\u4F18\u9009\u70B9\u843D\u5B50</b>\
+<br>\u53EF\u4EE5\u7528\u6765\u548CLeelaz\u5BF9\u6218\uFF0C\u4EE5\u53CA\u534A\u81EA\u52A8\u7684\u4EBA\u673A\u4E0B\u68CB\
+<br>\u4F8B\u5982\uFF0C\u5173\u6389\u9009\u70B9\u63D0\u793A\uFF0C\u8BBE\u7F6E\u4E00\u65B9\u8BFB\u79D2\u65F6\u95F4\uFF0C\u53EF\u4EE5\u548Cleelaz\u5BF9\u5F08\
+<br>\u4EBA\u673A\u65F6\uFF0C\u53EF\u4EE5\u501F\u52A9\u8FD9\u4E2A\u529F\u80FD\u8F85\u52A9\u843D\u5B50\uFF0C\u907F\u514D\u4EBA\u8BA1\u7B97\u65F6\u8D85\u65F6\u3002\u6B64\u65F6\u8BF7\u8BBE\u7F6E\u6BD4\u5B9E\u9645\u8BFB\u79D2\u65F6\u95F4\u7A0D\u77ED\u3002\
+</html>
+ByoYomiAutoPlayDialog.buttonExit.text=\u9000\u51FA
+ByoYomiAutoPlayDialog.buttonReset.text=\u91CD\u7F6E
+ByoYomiAutoPlayDialog.buttonStartPause.text=\u542F\u52A8/\u6682\u505C
+ByoYomiAutoPlayDialog.checkBoxBlackCountdown.text=\u9ED1\u68CB\u8BFB\u79D2
+ByoYomiAutoPlayDialog.checkBoxWhiteCountdown.text=\u767D\u68CB\u8BFB\u79D2
+ByoYomiAutoPlayDialog.labelCountdownIndicator.text=\u8BFB\u79D2
+ByoYomiAutoPlayDialog.labelCountdownTime.text=\u8BFB\u79D2\u65F6\u95F4:
+ByoYomiAutoPlayDialog.labelCountdownValue.text=30
+ByoYomiAutoPlayDialog.labelSeconds.text=\u79D2.
+ByoYomiAutoPlayDialog.labelSettings.text=\u8BBE\u7F6E:
+ByoYomiAutoPlayDialog.labelBlack.text=\u9ED1\u68CB
+ByoYomiAutoPlayDialog.labelWhite.text=\u767D\u68CB
