--- a/src/main/resources/wagner/stephanie/lizzie/i18n/GuiBundle.properties
+++ b/src/main/resources/wagner/stephanie/lizzie/i18n/GuiBundle.properties
@@ -104,3 +104,30 @@ Leelaz.prompt.engineNotStart=The engine seems stuck. Please use CTRL + C to copy
 Leelaz.prompt.unexpectedProcessEnd=Warning: leelaz process is terminated unexpectedly. Please check!
 LizzieFrame.prompt.enterEngineCommand=Please enter GTP command that will be sent to the engine.\n\
 Please do not input commands that can change the board state, such as play, undo or genmove.
+LizzieFrame.controls.leftArrow=Left Arrow | Go back one move
+LizzieFrame.controls.rightArrow=Right Arrow | Go forward one move
+LizzieFrame.controls.space=Space | Toggle pondering
+LizzieFrame.controls.rightClick=Right Click | Go back one move
+LizzieFrame.controls.mouseWheelScroll=Mouse Wheel Scroll | Go back/forward
+LizzieFrame.controls.keyP=P | Pass
+LizzieFrame.controls.keyN=N | Show/hide move number
+LizzieFrame.controls.keyO=O | Show settings dialog
+LizzieFrame.controls.keyAltC=Alt-C | Clear board
+LizzieFrame.controls.keyCtrlO=Ctrl-O | Open SGF file
+LizzieFrame.controls.keyCtrlS=Ctrl-S | Save SGF to file
+LizzieFrame.controls.keyCtrlC=Ctrl-C | Copy SGF to clipboard
+LizzieFrame.controls.keyCtrlV=Ctrl-V | Paste SGF from clipboard
+LizzieFrame.controls.keyG=G | Go to move number
+LizzieFrame.controls.keyV=V | Enter/Leave try playing state
+LizzieFrame.controls.keyX=X | Drop all successive moves
+LizzieFrame.controls.keyA=A | Show/hide best move list window
+LizzieFrame.controls.keyH=H | Show/hide winrate histogram window
+LizzieFrame.controls.keyHome=Home | Go to initial board
+LizzieFrame.controls.keyEnd=End | Go to the last move
+LizzieFrame.controls.keyS=S | Show/hide suggestions
+LizzieFrame.controls.keyC=C | Change an existing move
+LizzieFrame.controls.keyE=E | Send command to GTP engine
+LizzieFrame.controls.keyB=B | Auto play moves with count down
+LizzieFrame.controls.keyEnter=Enter | Play best moves immediately
+LizzieFrame.title.tryPlayingMode=... Try playing ...
+LizzieFrame.controls.keyF1=Hold F1 to view controls
