--- a/src/main/resources/wagner/stephanie/lizzie/i18n/GuiBundle_zh.properties
+++ b/src/main/resources/wagner/stephanie/lizzie/i18n/GuiBundle_zh.properties
@@ -106,3 +106,30 @@ ByoYomiAutoPlayDialog.labelSeconds.text=\u79D2.
 ByoYomiAutoPlayDialog.labelSettings.text=\u8BBE\u7F6E:
 ByoYomiAutoPlayDialog.labelBlack.text=\u9ED1\u68CB
 ByoYomiAutoPlayDialog.labelWhite.text=\u767D\u68CB
+LizzieFrame.controls.leftArrow=\u5DE6\u65B9\u5411\u952E | \u56DE\u9000\u4E00\u624B
+LizzieFrame.controls.rightArrow=\u53F3\u65B9\u5411\u952E | \u5411\u540E\u4E00\u624B
+LizzieFrame.controls.space=\u7A7A\u683C\u952E | \u505C\u6B62/\u5F00\u542F\u540E\u53F0\u5206\u6790
+LizzieFrame.controls.rightClick=\u9F20\u6807\u53F3\u952E | \u56DE\u9000\u4E00\u624B
+LizzieFrame.controls.mouseWheelScroll=\u9F20\u6807\u6EDA\u8F6E | \u56DE\u9000/\u524D\u8FDB
+LizzieFrame.controls.keyP=P | Pass\u4E00\u624B
+LizzieFrame.controls.keyN=N | \u663E\u793A/\u9690\u85CF\u624B\u6570
+LizzieFrame.controls.keyO=O | \u6253\u5F00\u8BBE\u7F6E\u7A97\u53E3
+LizzieFrame.controls.keyAltC=Alt-C | \u6E05\u9664\u68CB\u76D8\u56DE\u5230\u7A7A\u67B0\u72B6\u6001
+LizzieFrame.controls.keyCtrlO=Ctrl-O | \u6253\u5F00SGF\u6587\u4EF6
+LizzieFrame.controls.keyCtrlS=Ctrl-S | \u4FDD\u5B58SGF\u5230\u6587\u4EF6
+LizzieFrame.controls.keyCtrlC=Ctrl-C | \u62F7\u8D1DSGF\u5230\u526A\u8D34\u677F
+LizzieFrame.controls.keyCtrlV=Ctrl-V | \u4ECE\u526A\u8D34\u677F\u7C98\u8D34SGF\u76D8\u9762
+LizzieFrame.controls.keyG=G | \u5FEB\u6377\u8DF3\u8F6C\u5230\u6307\u5B9A\u624B\u6570
+LizzieFrame.controls.keyV=V | \u8FDB\u5165/\u9000\u51FA\u8BD5\u4E0B\u6A21\u5F0F
+LizzieFrame.controls.keyX=X | \u5F53\u524D\u624B\u4F5C\u4E3A\u6700\u540E\u4E00\u624B\uFF0C\u4E22\u5F03\u540E\u7EED\u6240\u6709\u68CB\u8C31
+LizzieFrame.controls.keyA=A | \u663E\u793A/\u9690\u85CF\u53D8\u5316\u56FE\u5217\u8868\u7A97\u53E3
+LizzieFrame.controls.keyH=H | \u663E\u793A/\u9690\u85CF\u80DC\u7387\u7A97\u53E3
+LizzieFrame.controls.keyHome=Home | \u56DE\u5230\u68CB\u8C31\u5F00\u59CB\uFF08\u7A7A\u67B0\uFF09
+LizzieFrame.controls.keyEnd=End | \u8DF3\u8F6C\u5230\u68CB\u8C31\u6700\u540E
+LizzieFrame.controls.keyS=S | \u663E\u793A/\u9690\u85CF\u9009\u70B9\u63D0\u793A\uFF08\u9ED1\u767D\u5206\u5F00\u63A7\u5236\uFF09
+LizzieFrame.controls.keyC=C | \u5386\u53F2\u68CB\u6B65\u6539\u9519
+LizzieFrame.controls.keyE=E | \u5411GTP\u5F15\u64CE\u53D1\u9001\u547D\u4EE4
+LizzieFrame.controls.keyB=B | \u6253\u5F00\u8BFB\u79D2\u7A97\u53E3\u81EA\u52A8\u843D\u5B50
+LizzieFrame.controls.keyEnter=Enter | \u7ACB\u523B\u5728\u5F53\u524D\u6700\u4F73\u9009\u70B9\u843D\u5B50
+LizzieFrame.title.tryPlayingMode=... Try playing ...
+LizzieFrame.controls.keyF1=\u6309\u4F4FF1\u53EF\u4EE5\u67E5\u770B\u5FEB\u6377\u952E\u8BF4\u660E
