--- a/src/main/resources/wagner/stephanie/lizzie/i18n/GuiBundle.properties
+++ b/src/main/resources/wagner/stephanie/lizzie/i18n/GuiBundle.properties
@@ -131,3 +131,6 @@ LizzieFrame.controls.keyB=B | Auto play moves with count down
 LizzieFrame.controls.keyEnter=Enter | Play best moves immediately
 LizzieFrame.title.tryPlayingMode=... Try playing ...
 LizzieFrame.controls.keyF1=Hold F1 to view controls
+LizzieFrame.controls.keyT=T | Estimate territory and score
+LizzieFrame.prompt.noGnuGoEngine=GNUGo not found in Lizzie's directory. Score estimation cannot perform.
+LizzieFrame.prompt.scoreEstimation=Score estimation(komi 7.5): 
