Support influence analysis

--- a/src/main/resources/wagner/stephanie/lizzie/i18n/GuiBundle.properties
+++ b/src/main/resources/wagner/stephanie/lizzie/i18n/GuiBundle.properties
@@ -133,4 +133,4 @@ LizzieFrame.title.tryPlayingMode=... Try playing ...
 LizzieFrame.controls.keyF1=Hold F1 to view controls
 LizzieFrame.controls.keyT=T | Estimate territory and score
 LizzieFrame.prompt.noGnuGoEngine=GNUGo not found in Lizzie's directory. Score estimation cannot perform.
-LizzieFrame.prompt.scoreEstimation=Score estimation(komi 7.5): 
+LizzieFrame.prompt.scoreEstimation=Score estimation(komi %.1f): %s
