Show move probability in analysis window

--- a/src/main/resources/wagner/stephanie/lizzie/i18n/GuiBundle.properties
+++ b/src/main/resources/wagner/stephanie/lizzie/i18n/GuiBundle.properties
@@ -134,3 +134,9 @@ LizzieFrame.controls.keyF1=Hold F1 to view controls
 LizzieFrame.controls.keyT=T | Estimate territory and score
 LizzieFrame.prompt.noGnuGoEngine=GNUGo not found in Lizzie's directory. Score estimation cannot perform.
 LizzieFrame.prompt.scoreEstimation=Score estimation(komi %.1f): %s
+AnalysisFrame.title=Analyzer
+AnalysisFrame.analysisTable.title.move=Move
+AnalysisFrame.analysisTable.title.winrate=Winrate
+AnalysisFrame.analysisTable.title.probability=Probability
+AnalysisFrame.analysisTable.title.calculation=PO
+AnalysisFrame.analysisTable.title.variation=PV
