--- a/src/main/resources/wagner/stephanie/lizzie/i18n/GuiBundle_zh.properties
+++ b/src/main/resources/wagner/stephanie/lizzie/i18n/GuiBundle_zh.properties
@@ -136,3 +136,9 @@ LizzieFrame.controls.keyF1=\u6309\u4F4FF1\u53EF\u4EE5\u67E5\u770B\u5FEB\u6377\u9
 LizzieFrame.controls.keyT=T | \u70B9\u76EE\u548C\u5F62\u52BF\u4F30\u8BA1
 LizzieFrame.prompt.noGnuGoEngine=Lizzie\u7684\u76EE\u5F55\u4E2D\u627E\u4E0D\u5230GNUGo\u7684\u7A0B\u5E8F\uFF0C\u65E0\u6CD5\u70B9\u76EE\u3002
 LizzieFrame.prompt.scoreEstimation=\u70B9\u76EE\u7ED3\u679C(\u9ED1\u8D34%.1f\u76EE\u8BA1\u7B97\u5728\u5185): %s
+AnalysisFrame.title=\u9009\u70B9\u5217\u8868
+AnalysisFrame.analysisTable.title.move=\u9009\u70B9
+AnalysisFrame.analysisTable.title.winrate=\u80DC\u7387
+AnalysisFrame.analysisTable.title.probability=\u7F51\u7EDC\u6982\u7387
+AnalysisFrame.analysisTable.title.calculation=\u8BA1\u7B97\u91CF
+AnalysisFrame.analysisTable.title.variation=\u53D8\u5316
