Support Zen score estimation now but the result is not the same as zen.

--- a/src/main/resources/wagner/stephanie/lizzie/i18n/GuiBundle_zh.properties
+++ b/src/main/resources/wagner/stephanie/lizzie/i18n/GuiBundle_zh.properties
@@ -134,8 +134,8 @@ LizzieFrame.controls.keyEnter=Enter | \u7ACB\u523B\u5728\u5F53\u524D\u6700\u4F73
 LizzieFrame.title.tryPlayingMode=... Try playing ...
 LizzieFrame.controls.keyF1=\u6309\u4F4FF1\u53EF\u4EE5\u67E5\u770B\u5FEB\u6377\u952E\u8BF4\u660E
 LizzieFrame.controls.keyT=T | \u70B9\u76EE\u548C\u5F62\u52BF\u4F30\u8BA1
-LizzieFrame.prompt.noGnuGoEngine=Lizzie\u7684\u76EE\u5F55\u4E2D\u627E\u4E0D\u5230GNUGo\u7684\u7A0B\u5E8F\uFF0C\u65E0\u6CD5\u70B9\u76EE\u3002
-LizzieFrame.prompt.scoreEstimation=\u70B9\u76EE\u7ED3\u679C(\u9ED1\u8D34%.1f\u76EE\u8BA1\u7B97\u5728\u5185): %s
+LizzieFrame.prompt.noEstimatorEngine=Lizzie\u7684\u76EE\u5F55\u4E2D\u627E\u4E0D\u5230GNU Go\u7684\u7A0B\u5E8F\uFF0C\u4E5F\u627E\u4E0D\u5230Zen.dll\u548CYAZenGtp.exe\uFF0C\u65E0\u6CD5\u70B9\u76EE\u3002
+LizzieFrame.prompt.scoreEstimation=%s\u7684\u70B9\u76EE\u7ED3\u679C(\u9ED1\u8D34%.1f\u76EE): %s
 AnalysisFrame.title=\u9009\u70B9\u5217\u8868
 AnalysisFrame.analysisTable.title.move=\u9009\u70B9
 AnalysisFrame.analysisTable.title.winrate=\u80DC\u7387
