--- a/src/main/resources/wagner/stephanie/lizzie/i18n/GuiBundle.properties
+++ b/src/main/resources/wagner/stephanie/lizzie/i18n/GuiBundle.properties
@@ -132,8 +132,8 @@ LizzieFrame.controls.keyEnter=Enter | Play best moves immediately
 LizzieFrame.title.tryPlayingMode=... Try playing ...
 LizzieFrame.controls.keyF1=Hold F1 to view controls
 LizzieFrame.controls.keyT=T | Estimate territory and score
-LizzieFrame.prompt.noGnuGoEngine=GNUGo not found in Lizzie's directory. Score estimation cannot perform.
-LizzieFrame.prompt.scoreEstimation=Score estimation(komi %.1f): %s
+LizzieFrame.prompt.noEstimatorEngine=GNU Go or Zen not found in Lizzie's directory. Score estimation cannot perform.
+LizzieFrame.prompt.scoreEstimation=Score estimation by engine %s (komi %.1f): %s
 AnalysisFrame.title=Analyzer
 AnalysisFrame.analysisTable.title.move=Move
 AnalysisFrame.analysisTable.title.winrate=Winrate
