Show transparent variation stones

--- a/src/main/resources/wagner/stephanie/lizzie/i18n/GuiBundle_zh.properties
+++ b/src/main/resources/wagner/stephanie/lizzie/i18n/GuiBundle_zh.properties
@@ -142,3 +142,4 @@ AnalysisFrame.analysisTable.title.winrate=\u80DC\u7387
 AnalysisFrame.analysisTable.title.probability=\u7F51\u7EDC\u6982\u7387
 AnalysisFrame.analysisTable.title.calculation=\u8BA1\u7B97\u91CF
 AnalysisFrame.analysisTable.title.variation=\u53D8\u5316
+OptionDialog.checkBoxTransparentVariation.text=\u53D8\u5316\u56FE\u7684\u68CB\u5B50\u534A\u900F\u660E\u663E\u793A
