--- a/src/main/resources/wagner/stephanie/lizzie/i18n/GuiBundle.properties
+++ b/src/main/resources/wagner/stephanie/lizzie/i18n/GuiBundle.properties
@@ -41,6 +41,7 @@ EngineProfileManagerDialog.this.title=Engine Profile Manager
 OptionDialog.buttonManage.text=Manage...
 OptionDialog.buttonResetCommandLine.text=Reset
 OptionDialog.cancelButton.text=Cancel
+OptionDialog.checkBoxTransparentVariation.text=Display tTransparent variation stones
 OptionDialog.checkBoxAnalysisWindowShow.text=Show move list
 OptionDialog.checkBoxAutoEnterTryPlayingMode.text=Automatically enter when placing stone in middle game.
 OptionDialog.checkBoxFancyStones.text=Fancy stones
