Added missing translation

--- a/src/main/resources/wagner/stephanie/lizzie/i18n/GuiBundle_zh.properties
+++ b/src/main/resources/wagner/stephanie/lizzie/i18n/GuiBundle_zh.properties
@@ -143,3 +143,4 @@ AnalysisFrame.analysisTable.title.probability=\u7F51\u7EDC\u6982\u7387
 AnalysisFrame.analysisTable.title.calculation=\u8BA1\u7B97\u91CF
 AnalysisFrame.analysisTable.title.variation=\u53D8\u5316
 OptionDialog.checkBoxTransparentVariation.text=\u53D8\u5316\u56FE\u7684\u68CB\u5B50\u534A\u900F\u660E\u663E\u793A
+OptionDialog.checkBoxAutoStartThinkingAfterPlacingMoves.text=\u7A7A\u683C\u505C\u6B62\u5206\u6790\u540E\uFF0C\u843D\u5B50\u65F6\u81EA\u52A8\u5F00\u59CB\u5206\u6790
