--- a/src/main/resources/wagner/stephanie/lizzie/i18n/GuiBundle.properties
+++ b/src/main/resources/wagner/stephanie/lizzie/i18n/GuiBundle.properties
@@ -4,6 +4,8 @@
 ByoYomiAutoPlayDialog.buttonStartPause.text=Start/Pause
 ByoYomiAutoPlayDialog.buttonReset.text=Reset
 ByoYomiAutoPlayDialog.buttonExit.text=Exit
+ByoYomiAutoPlayDialog.checkBoxStopThinkingWhenCountDown.text=Stop thinking when counting down
+ByoYomiAutoPlayDialog.checkBoxStopThinkingWhenCountDown.toolTipText=When it is opponent's move, stops background thinking.
 ByoYomiAutoPlayDialog.checkBoxBlackCountdown.text=Black count down
 ByoYomiAutoPlayDialog.checkBoxWhiteCountdown.text=White count down
 ByoYomiAutoPlayDialog.labelWhite.text=White
@@ -13,12 +15,8 @@ ByoYomiAutoPlayDialog.labelCountdownIndicator.text=Count down
 ByoYomiAutoPlayDialog.labelSeconds.text=second(s).
 ByoYomiAutoPlayDialog.labelCountdownTime.text=Count down\:
 ByoYomiAutoPlayDialog.labelSettings.text=Settings\:
-ByoYomiAutoPlayDialog.labelNotes.text=<html>\
-<b>Automatically place a move when byou-yomi(count down) ends.</b>\
-<br>Usually used for playing with leelaz.\
-<br>For example, you can turn off the suggesstions and set count down time.\
-</html>
-ByoYomiAutoPlayDialog.this.title=Byou-yomi Auto Play
+ByoYomiAutoPlayDialog.labelNotes.text=<html><b>Automatically play a move when byo-yomi(count down) ends.</b><br>Usually used for playing with leelaz.<br>For example, you can turn off the suggesstions and set count down time.</html>
+ByoYomiAutoPlayDialog.this.title=Byo-yomi Auto Play
 ChangeMoveDialog.cancelButton.text=Cancel
 ChangeMoveDialog.labelChangeTo.text=Change coordinates to:
 ChangeMoveDialog.labelMoveNumber.text=Move number:
