--- a/src/main/resources/wagner/stephanie/lizzie/i18n/GuiBundle_zh.properties
+++ b/src/main/resources/wagner/stephanie/lizzie/i18n/GuiBundle_zh.properties
@@ -144,3 +144,5 @@ AnalysisFrame.analysisTable.title.calculation=\u8BA1\u7B97\u91CF
 AnalysisFrame.analysisTable.title.variation=\u53D8\u5316
 OptionDialog.checkBoxTransparentVariation.text=\u53D8\u5316\u56FE\u7684\u68CB\u5B50\u534A\u900F\u660E\u663E\u793A
 OptionDialog.checkBoxAutoStartThinkingAfterPlacingMoves.text=\u7A7A\u683C\u505C\u6B62\u5206\u6790\u540E\uFF0C\u843D\u5B50\u65F6\u81EA\u52A8\u5F00\u59CB\u5206\u6790
+ByoYomiAutoPlayDialog.checkBoxStopThinkingWhenCountDown.text=\u6CA1\u6709\u8BFB\u79D2\u65F6\u6682\u505C\u540E\u53F0\u601D\u8003
+ByoYomiAutoPlayDialog.checkBoxStopThinkingWhenCountDown.toolTipText=\u5728\u5BF9\u65B9\u884C\u68CB\uFF0C\u6CA1\u6709\u8F6E\u5230\u81EA\u5DF1\u8BFB\u79D2\u65F6\uFF0C\u505C\u6B62\u540E\u53F0\u601D\u8003\u4EE5\u51CF\u8F7B\u663E\u5361\u8D1F\u62C5
