Improved score display

--- a/src/main/resources/wagner/stephanie/lizzie/i18n/GuiBundle.properties
+++ b/src/main/resources/wagner/stephanie/lizzie/i18n/GuiBundle.properties
@@ -133,10 +133,12 @@ LizzieFrame.title.tryPlayingMode=... Try playing ...
 LizzieFrame.controls.keyF1=Hold F1 to view controls
 LizzieFrame.controls.keyT=T | Estimate territory and score
 LizzieFrame.prompt.noEstimatorEngine=GNU Go or Zen not found in Lizzie's directory. Score estimation cannot perform.
-LizzieFrame.prompt.scoreEstimation=Score estimation by engine %s (komi %.1f): %s
+LizzieFrame.prompt.scoreEstimation=Score estimation by engine %s (komi %.1f): %s leads %.1f point(s).
 AnalysisFrame.title=Analyzer
 AnalysisFrame.analysisTable.title.move=Move
 AnalysisFrame.analysisTable.title.winrate=Winrate
 AnalysisFrame.analysisTable.title.probability=Probability
 AnalysisFrame.analysisTable.title.calculation=PO
 AnalysisFrame.analysisTable.title.variation=PV
+LizzieFrame.prompt.colorBlack=Black
+LizzieFrame.prompt.colorWhite=White
