--- a/src/main/resources/wagner/stephanie/lizzie/i18n/GuiBundle_zh.properties
+++ b/src/main/resources/wagner/stephanie/lizzie/i18n/GuiBundle_zh.properties
@@ -135,7 +135,7 @@ LizzieFrame.title.tryPlayingMode=... Try playing ...
 LizzieFrame.controls.keyF1=\u6309\u4F4FF1\u53EF\u4EE5\u67E5\u770B\u5FEB\u6377\u952E\u8BF4\u660E
 LizzieFrame.controls.keyT=T | \u70B9\u76EE\u548C\u5F62\u52BF\u4F30\u8BA1
 LizzieFrame.prompt.noEstimatorEngine=Lizzie\u7684\u76EE\u5F55\u4E2D\u627E\u4E0D\u5230GNU Go\u7684\u7A0B\u5E8F\uFF0C\u4E5F\u627E\u4E0D\u5230Zen.dll\u548CYAZenGtp.exe\uFF0C\u65E0\u6CD5\u70B9\u76EE\u3002
-LizzieFrame.prompt.scoreEstimation=%s\u7684\u70B9\u76EE\u7ED3\u679C(\u9ED1\u8D34%.1f\u76EE): %s
+LizzieFrame.prompt.scoreEstimation=%s\u7684\u70B9\u76EE\u7ED3\u679C(\u9ED1\u8D34%.1f\u76EE): %s\u9886\u5148%.1f\u76EE\u3002
 AnalysisFrame.title=\u9009\u70B9\u5217\u8868
 AnalysisFrame.analysisTable.title.move=\u9009\u70B9
 AnalysisFrame.analysisTable.title.winrate=\u80DC\u7387
@@ -146,3 +146,5 @@ OptionDialog.checkBoxTransparentVariation.text=\u53D8\u5316\u56FE\u7684\u68CB\u5
 OptionDialog.checkBoxAutoStartThinkingAfterPlacingMoves.text=\u7A7A\u683C\u505C\u6B62\u5206\u6790\u540E\uFF0C\u843D\u5B50\u65F6\u81EA\u52A8\u5F00\u59CB\u5206\u6790
 ByoYomiAutoPlayDialog.checkBoxStopThinkingWhenCountDown.text=\u6CA1\u6709\u8BFB\u79D2\u65F6\u6682\u505C\u540E\u53F0\u601D\u8003
 ByoYomiAutoPlayDialog.checkBoxStopThinkingWhenCountDown.toolTipText=\u5728\u5BF9\u65B9\u884C\u68CB\uFF0C\u6CA1\u6709\u8F6E\u5230\u81EA\u5DF1\u8BFB\u79D2\u65F6\uFF0C\u505C\u6B62\u540E\u53F0\u601D\u8003\u4EE5\u51CF\u8F7B\u663E\u5361\u8D1F\u62C5
+LizzieFrame.prompt.colorBlack=\u9ED1
+LizzieFrame.prompt.colorWhite=\u767D
