Customized winrate filter

--- a/src/main/resources/wagner/stephanie/lizzie/i18n/GuiBundle.properties
+++ b/src/main/resources/wagner/stephanie/lizzie/i18n/GuiBundle.properties
@@ -87,7 +87,7 @@ OptionDialog.radioButtonV5.text=5
 OptionDialog.this.title=Options
 WinrateHistogramDialog.checkBoxHistogramShowBlack.text=Show black
 WinrateHistogramDialog.checkBoxHistogramShowWhite.text=Show white
-WinrateHistogramDialog.checkBoxShowOnlyHighOscillation.text=Show only moves with high oscillation of winrate
+WinrateHistogramDialog.checkBoxShowOnlyHighOscillation.text=Show only moves with winrate change greater than\:
 WinrateHistogramDialog.this.title=Winrate Histogram
 WinrateHistogramDialog.histogramTable.title.moveNumber=Move Number
 WinrateHistogramDialog.histogramTable.title.color=Color
