--- a/src/main/resources/wagner/stephanie/lizzie/i18n/GuiBundle_zh.properties
+++ b/src/main/resources/wagner/stephanie/lizzie/i18n/GuiBundle_zh.properties
@@ -65,7 +65,7 @@ OptionDialog.radioButtonV5.text=5\u6B65
 OptionDialog.this.title=\u9009\u9879
 WinrateHistogramDialog.checkBoxHistogramShowBlack.text=\u663E\u793A\u9ED1\u68CB\u80DC\u7387
 WinrateHistogramDialog.checkBoxHistogramShowWhite.text=\u663E\u793A\u767D\u68CB\u80DC\u7387
-WinrateHistogramDialog.checkBoxShowOnlyHighOscillation.text=\u53EA\u663E\u793A\u80DC\u7387\u6CE2\u52A8\u8F83\u5927\u7684\u624B\u6570
+WinrateHistogramDialog.checkBoxShowOnlyHighOscillation.text=\u53EA\u663E\u793A\u80DC\u7387\u6CE2\u52A8\u8D85\u8FC7\u9608\u503C\u7684\u624B\u6570. \u9608\u503C\:
 WinrateHistogramDialog.this.title=\u80DC\u7387\u56FE
 WinrateHistogramDialog.histogramTable.title.moveNumber=\u624B\u6570
 WinrateHistogramDialog.histogramTable.title.color=\u884C\u68CB\u65B9(\u9ED1B\u767DW)
