Added menu for lizzie

--- a/src/main/resources/wagner/stephanie/lizzie/i18n/GuiBundle.properties
+++ b/src/main/resources/wagner/stephanie/lizzie/i18n/GuiBundle.properties
@@ -20,7 +20,7 @@ ByoYomiAutoPlayDialog.this.title=Byo-yomi Auto Play
 ChangeMoveDialog.cancelButton.text=Cancel
 ChangeMoveDialog.labelChangeTo.text=Change coordinates to:
 ChangeMoveDialog.labelMoveNumber.text=Move number:
-ChangeMoveDialog.labelNotes.text=Please input the move number and the correct coordinate you want to modify.
+ChangeMoveDialog.labelNotes.text=<html>Please input the move number and the correct coordinate you want to modify.<br>The move number should be a positive number.<br>The format of coords are like "A1" or "T19"</html>
 ChangeMoveDialog.okButton.text=OK
 ChangeMoveDialog.this.title=Change existing move
 EngineProfileManagerDialog.cancelButton.text=Cancel
@@ -142,3 +142,18 @@ AnalysisFrame.analysisTable.title.calculation=PO
 AnalysisFrame.analysisTable.title.variation=PV
 LizzieFrame.prompt.colorBlack=Black
 LizzieFrame.prompt.colorWhite=White
+LizzieFrame.menu.file=File
+LizzieFrame.menu.edit=Edit
+LizzieFrame.menu.file.open=Open
+LizzieFrame.menu.file.save=Save
+LizzieFrame.menu.edit.copy=Copy
+LizzieFrame.menu.edit.paste=Paste
+LizzieFrame.menu.edit.modifyMove=Modify history move...
+LizzieFrame.menu.navigate=Navigate
+LizzieFrame.menu.navigate.toBegin=Go to the beginning
+LizzieFrame.menu.navigate.toEnd=Go to the end
+LizzieFrame.menu.navigate.gotoMove=Go to move...
+LizzieFrame.menu.game=Game
+LizzieFrame.menu.game.scoring=Score counting...
+LizzieFrame.menu.game.tryPlayingMode=Enter or leave try playing mode
+LizzieFrame.menu.game.pass=Pass
