--- a/src/main/resources/wagner/stephanie/lizzie/i18n/GuiBundle_zh.properties
+++ b/src/main/resources/wagner/stephanie/lizzie/i18n/GuiBundle_zh.properties
@@ -17,7 +17,7 @@ EngineProfileManagerDialog.cancelButton.text=\u53D6\u6D88
 ChangeMoveDialog.cancelButton.text=\u53D6\u6D88
 ChangeMoveDialog.labelChangeTo.text=\u4FEE\u6539\u5750\u6807\u4E3A:
 ChangeMoveDialog.labelMoveNumber.text=\u8981\u4FEE\u6539\u7684\u624B\u6570:
-ChangeMoveDialog.labelNotes.text=\u8BF7\u8F93\u5165\u8981\u4FEE\u6539\u7684\u624B\u6570\u4EE5\u53CA\u6B63\u786E\u7684\u5750\u6807. \u624B\u6570\u81F3\u5C11\u662F1\uFF0C\u6700\u591A\u662F\u6700\u540E\u4E00\u624B\u7684\u624B\u6570\u3002
+ChangeMoveDialog.labelNotes.text=<html>\u8BF7\u8F93\u5165\u8981\u4FEE\u6539\u7684\u624B\u6570\u4EE5\u53CA\u6B63\u786E\u7684\u5750\u6807. <br>\u624B\u6570\u81F3\u5C11\u662F1\uFF0C\u6700\u591A\u662F\u6700\u540E\u4E00\u624B\u7684\u624B\u6570\u3002\u5982\u679C\u770B\u4E0D\u5230\u624B\u6570\uFF0C\u8BF7\u6309N\u952E\u663E\u793A\u3002<br>\u5750\u6807\u5F62\u5F0F\u5982A1\u3001T19\uFF0C\u5B57\u6BCD\u5728\u524D\u4E14\u9700\u4E3A\u5927\u5199</html>
 ChangeMoveDialog.okButton.text=\u786E\u5B9A
 ChangeMoveDialog.this.title=\u4FEE\u6539\u5DF2\u4E0B\u7684\u5B50
 OptionDialog.buttonManage.text=\u7BA1\u7406...
@@ -148,3 +148,18 @@ ByoYomiAutoPlayDialog.checkBoxStopThinkingWhenCountDown.text=\u6CA1\u6709\u8BFB\
 ByoYomiAutoPlayDialog.checkBoxStopThinkingWhenCountDown.toolTipText=\u5728\u5BF9\u65B9\u884C\u68CB\uFF0C\u6CA1\u6709\u8F6E\u5230\u81EA\u5DF1\u8BFB\u79D2\u65F6\uFF0C\u505C\u6B62\u540E\u53F0\u601D\u8003\u4EE5\u51CF\u8F7B\u663E\u5361\u8D1F\u62C5
 LizzieFrame.prompt.colorBlack=\u9ED1
 LizzieFrame.prompt.colorWhite=\u767D
+LizzieFrame.menu.file=\u6587\u4EF6
+LizzieFrame.menu.edit=\u7F16\u8F91
+LizzieFrame.menu.file.open=\u6253\u5F00
+LizzieFrame.menu.file.save=\u4FDD\u5B58
+LizzieFrame.menu.edit.copy=\u62F7\u8D1D
+LizzieFrame.menu.edit.paste=\u7C98\u8D34
+LizzieFrame.menu.edit.modifyMove=\u5386\u53F2\u68CB\u6B65\u6539\u9519...
+LizzieFrame.menu.navigate=\u5BFC\u822A
+LizzieFrame.menu.navigate.toBegin=\u8DF3\u5230\u68CB\u8C31\u5F00\u59CB
+LizzieFrame.menu.navigate.toEnd=\u8DF3\u5230\u68CB\u8C31\u6700\u540E
+LizzieFrame.menu.navigate.gotoMove=\u8DF3\u8F6C\u5230\u6307\u5B9A\u624B\u6570...
+LizzieFrame.menu.game=\u68CB\u5C40
+LizzieFrame.menu.game.scoring=\u70B9\u76EE\u4E0E\u5F62\u52BF\u4F30\u8BA1...
+LizzieFrame.menu.game.tryPlayingMode=\u8FDB\u5165/\u9000\u51FA\u8BD5\u4E0B\u6A21\u5F0F
+LizzieFrame.menu.game.pass=\u865A\u624B
