Added about dialog and fixed several bugs

--- a/src/main/resources/wagner/stephanie/lizzie/i18n/GuiBundle.properties
+++ b/src/main/resources/wagner/stephanie/lizzie/i18n/GuiBundle.properties
@@ -134,6 +134,11 @@ LizzieFrame.controls.keyF1=Hold F1 to view controls
 LizzieFrame.controls.keyT=T | Estimate territory and score
 LizzieFrame.prompt.noEstimatorEngine=GNU Go or Zen not found in Lizzie's directory. Score estimation cannot perform.
 LizzieFrame.prompt.scoreEstimation=Score estimation by engine %s (komi %.1f): %s leads %.1f point(s).
+AboutDialog.labelAuthor.text=<html>Author\: Aeris (QQ\: 417214250)<br>Original code from featurecat's lizzie<br>Source code\: https\://github.com/aerisnju/mylizzie</html>
+AboutDialog.labelMyLizzie.text=MyLizzie
+AboutDialog.labelVersion.text=dev-build
+AboutDialog.okButton.text=OK
+AboutDialog.this.title=About mylizzie
 AnalysisFrame.title=Analyzer
 AnalysisFrame.analysisTable.title.move=Move
 AnalysisFrame.analysisTable.title.winrate=Winrate
@@ -157,3 +162,6 @@ LizzieFrame.menu.game=Game
 LizzieFrame.menu.game.scoring=Score counting...
 LizzieFrame.menu.game.tryPlayingMode=Enter or leave try playing mode
 LizzieFrame.menu.game.pass=Pass
+Leelaz.prompt.engineNotCompatible=This version of Leela Zero is incompatible with Lizzie.Please follow the instructions in the readme.
+LizzieFrame.menu.help=Help
+LizzieFrame.menu.help.about=About...
