Support detailed score calculation

--- a/src/main/resources/wagner/stephanie/lizzie/i18n/GuiBundle.properties
+++ b/src/main/resources/wagner/stephanie/lizzie/i18n/GuiBundle.properties
@@ -165,3 +165,11 @@ LizzieFrame.menu.game.pass=Pass
 Leelaz.prompt.engineNotCompatible=This version of Leela Zero is incompatible with Lizzie.Please follow the instructions in the readme.
 LizzieFrame.menu.help=Help
 LizzieFrame.menu.help.about=About...
+LizzieFrame.prompt.detailedScoreEstimation=Score estimation by engine %s (komi %.1f): %s leads %.1f point(s).\n\
+Black territory: %d\n\
+White territory: %d\n\
+Black dead stone: %d\n\
+White dead stone: %d\n\
+Black prisoner: %d\n\
+White prisoner: %d\n\
+The black or white territory includes opponent's dead stones.
