--- a/src/main/resources/wagner/stephanie/lizzie/i18n/GuiBundle_zh.properties
+++ b/src/main/resources/wagner/stephanie/lizzie/i18n/GuiBundle_zh.properties
@@ -171,3 +171,11 @@ AboutDialog.okButton.text=\u786E\u5B9A
 AboutDialog.this.title=\u5173\u4E8EMyLizzie
 LizzieFrame.menu.help=\u5E2E\u52A9
 LizzieFrame.menu.help.about=\u5173\u4E8E...
+LizzieFrame.prompt.detailedScoreEstimation=%s\u7684\u70B9\u76EE\u7ED3\u679C(\u9ED1\u8D34%.1f\u76EE): %s\u9886\u5148%.1f\u76EE\u3002\n\
+\u9ED1\u68CB\u5730\u57DF: %d\u4EA4\u53C9\u70B9\n\
+\u767D\u68CB\u5730\u57DF: %d\u4EA4\u53C9\u70B9\n\
+\u9ED1\u68CB\u6B7B\u5B50: %d\u4E2A\n\
+\u767D\u68CB\u6B7B\u5B50: %d\u4E2A\n\
+\u9ED1\u68CB\u63D0\u5B50: %d\u4E2A\n\
+\u767D\u68CB\u63D0\u5B50: %d\u4E2A\n\
+\u9ED1\u767D\u5730\u57DF\u5305\u62EC\u5BF9\u65B9\u6B7B\u5B50\u6240\u5360\u7684\u4EA4\u53C9\u70B9\uFF1B\u8BA1\u7B97\u76EE\u6570\u65F6\u6B7B\u5B50\u6570\u4E0D\u9700\u8981\u4E58\u4EE52.
