Refined about dialog's information

--- a/src/main/resources/wagner/stephanie/lizzie/i18n/GuiBundle.properties
+++ b/src/main/resources/wagner/stephanie/lizzie/i18n/GuiBundle.properties
@@ -134,7 +134,7 @@ LizzieFrame.controls.keyF1=Hold F1 to view controls
 LizzieFrame.controls.keyT=T | Estimate territory and score
 LizzieFrame.prompt.noEstimatorEngine=GNU Go or Zen not found in Lizzie's directory. Score estimation cannot perform.
 LizzieFrame.prompt.scoreEstimation=Score estimation by engine %s (komi %.1f): %s leads %.1f point(s).
-AboutDialog.labelAuthor.text=<html>Author\: Aeris (QQ\: 417214250)<br>Original code from featurecat's lizzie<br>Source code\: https\://github.com/aerisnju/mylizzie</html>
+AboutDialog.labelAuthor.text=<html>Author\: Aeris (QQ\: 417214250)<br>License\: GPLv3<br>Source code\: https\://github.com/aerisnju/mylizzie<br>This project is derived from <b>featurecat's lizzie</b>(GPLv3).<br>Original lizzie's source code\: https\://github.com/featurecat/lizzie</html>
 AboutDialog.labelMyLizzie.text=MyLizzie
 AboutDialog.labelVersion.text=dev-build
 AboutDialog.okButton.text=OK
