--- a/src/main/resources/wagner/stephanie/lizzie/i18n/GuiBundle_zh.properties
+++ b/src/main/resources/wagner/stephanie/lizzie/i18n/GuiBundle_zh.properties
@@ -164,7 +164,7 @@ LizzieFrame.menu.game.scoring=\u70B9\u76EE\u4E0E\u5F62\u52BF\u4F30\u8BA1...
 LizzieFrame.menu.game.tryPlayingMode=\u8FDB\u5165/\u9000\u51FA\u8BD5\u4E0B\u6A21\u5F0F
 LizzieFrame.menu.game.pass=\u865A\u624B
 Leelaz.prompt.engineNotCompatible=\u68C0\u6D4B\u5230\u4F7F\u7528\u7684Leela Zero\u7248\u672C\u548CLizzie\u4E0D\u517C\u5BB9\uFF0C\u53EF\u80FD\u4F7F\u7528\u4E86\u5B98\u65B9\u7684\u7248\u672C\u3002Lizzie\u9700\u8981\u4FEE\u6539\u7248\u7684Leela Zero\uFF0C\u4E0D\u80FD\u76F4\u63A5\u4F7F\u7528\u5B98\u65B9\u7684\u7248\u672C\u3002\u8BF7\u4E0B\u8F7DLizzie\u4E13\u7528\u7684\u4FEE\u6539\u7248Leela Zero\u3002
-AboutDialog.labelAuthor.text=<html>\u4F5C\u8005: Aeris (QQ: 417214250)<br>\u672C\u7A0B\u5E8F\u4FEE\u6539\u81EAfeaturecat\u7684\u539F\u7248lizzie<br>\u6E90\u4EE3\u7801: https://github.com/aerisnju/mylizzie<br>\u672C\u7A0B\u5E8F\u4E3A\u5F00\u6E90\u8F6F\u4EF6\uFF0C\u6388\u6743\u534F\u8BAE: GPLv3</html>
+AboutDialog.labelAuthor.text=<html>\u4F5C\u8005\: Aeris (QQ\: 417214250)<br>\u672C\u7A0B\u5E8F\u4E3A\u5F00\u6E90\u8F6F\u4EF6\uFF0C\u6388\u6743\u534F\u8BAE\: GPLv3<br>\u6E90\u4EE3\u7801\: https\://github.com/aerisnju/mylizzie<br>\u672C\u7A0B\u5E8F\u4FEE\u6539\u81EA<b>featurecat</b>\u7684\u539F\u7248<b>lizzie</b>(GPLv3)<br>\u539F\u7248\u4EE3\u7801\: http\://github.com/featurecat/lizzie</html>
 AboutDialog.labelMyLizzie.text=MyLizzie
 AboutDialog.labelVersion.text=\u5F00\u53D1\u7248
 AboutDialog.okButton.text=\u786E\u5B9A
