Added option to show or not show coordinates

--- a/src/main/resources/wagner/stephanie/lizzie/i18n/GuiBundle.properties
+++ b/src/main/resources/wagner/stephanie/lizzie/i18n/GuiBundle.properties
@@ -39,6 +39,7 @@ EngineProfileManagerDialog.this.title=Engine Profile Manager
 OptionDialog.buttonManage.text=Manage...
 OptionDialog.buttonResetCommandLine.text=Reset
 OptionDialog.cancelButton.text=Cancel
+OptionDialog.checkBoxShowAxis.text=Show
 OptionDialog.checkBoxAutoStartThinkingAfterPlacingMoves.text=Auto start analyzing after placing moves
 OptionDialog.checkBoxTransparentVariation.text=Display transparent variation stones
 OptionDialog.checkBoxAnalysisWindowShow.text=Show move list
@@ -75,7 +76,7 @@ OptionDialog.okButton.text=OK
 OptionDialog.radioButtonBoard19x19.text=19x19
 OptionDialog.radioButtonBoard13x13.text=13x13
 OptionDialog.radioButtonBoard9x9.text=9x9
-OptionDialog.radioButtonA1Bottom.text=A1 is on bottom(Yike, Yicheng, Zen, .etc)
+OptionDialog.radioButtonA1Bottom.text=A1 is on bottom(Standard, e.g. Yike, Zen, .etc)
 OptionDialog.radioButtonA1Top.text=A1 is on top(Yehu)
 OptionDialog.radioButtonBoardClassic.text=Classic:
 OptionDialog.radioButtonBoardFancy.text=Fancy
